Add deterministic engine/compiler test harness and regression tests

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "test:build": "rm -rf .tmp-test-build && tsc -p tsconfig.tests.json && echo '{\"type\":\"commonjs\"}' > .tmp-test-build/package.json",
+    "test": "npm run test:build && node --test .tmp-test-build/tests/**/*.test.js",
     "preview": "vite preview",
     "start": "node server.js"
   },
